--- a/web/index.html
+++ b/web/index.html
@@ -1,1 +1,6 @@
-This is static resource!
+<html>
+  <body bgcolor="gray">
+    <h2><b><i>Welcome to treselle!</i></b></h2>
+    <h2><b><i>This is static webpage in QA - branch!</i></b></h2>
+  </body>
+</html>
